ensure odd images that are too large don't show up

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -60,6 +60,7 @@ a:hover { color: #fff; background-color:#000; }
 	margin: 0.5em 8px 8px 0;
 	width: 50px;
 	height: 50px;
+	overflow: hidden;
 }
 
 .reply-link {
